--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tutor Platform</title>
+  <link rel="icon" href="logo.png" type="image/x-icon">
 
 </head>
 
